# back-portfoyar

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile.api.dev  Dockerfile.api.prod  Dockerfile.api.test  Dockerfile.nginx.dev  Dockerfile.nginx.prod  Dockerfile.nginx.test  README.md  compose.dev.yml  compose.prod.yml  compose.test.yml  deploy-dev.sh  deploy-local.sh  deploy-prod.sh  deploy-test.sh  docker-compose.api.test.local.yml  docker-compose.api.test.server.yml  docker-compose.api.test.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.wp.server.yml  dockerfile.api.dev  dockerfile.api.prod  dockerfile.api.test  manage.py  pyproject.toml
account/: apps.py  urls.py
account/admin/: __init__.py  custom_user_admin.py  feature_admin.py  first_login_admin.py  profile_admin.py  subscription_admin.py
account/migrations/: 0001_initial.py  0002_alter_profile_user.py  0003_alter_profile_options.py  0004_alter_profile_max_login.py  0005_subscription.py  0006_feature_alter_subscription_options_and_more.py  0007_featurediscount.py  0008_alter_featurediscount_description_and_more.py  0009_alter_featurediscount_discount_code.py  0010_userdiscount.py  0011_profile_active_login.py  0012_feature_login_count.py  0013_alter_userdiscount_max_use_count.py  0014_alter_feature_name.py  0015_alter_featurediscount_options_and_more.py  0016_feature_is_enabled_subscription_is_enabled.py  0017_profile_note.py  0018_alter_feature_name.py  0019_alter_feature_name.py  0020_alter_feature_name.py  0021_alter_feature_name.py  0022_subscription_desc_alter_feature_name.py  0023_disabledfeature.py  0024_disabledfeaturediscount.py  0025_disabledsubscription_disableduserdiscount.py  0026_alter_feature_options_alter_featurediscount_options_and_more.py  0027_logincount.py  0028_firstlogin.py
account/models/: __init__.py  feature_model.py  first_login_model.py  profile_model.py  subscription_model.py
account/serializers/: __init__.py  receipt_srz.py  sign_up_srz.py  subscription_srz.py
account/signals/: __init__.py  after_user_signup_signals.py  create_profile_signal.py
account/tasks/: __init__.py  disable_expired_subscriptions_task.py
account/utils/: __init__.py  check_code_expiry_util.py  check_daily_limitation_util.py  check_token_code_match_util.py  code_token_generated_saved_util.py  first_login_util.py  send_verify_code_util.py  subscription_cli_util.py  (+3 more)
core/: configs.py  new_user_report_apiview.py  portfoyar_scheduler_util.py  scheduled_jobs.py  test_consumer.py  test_view.py  urls.py
dashboard/: routes.py  urls.py
domestic_market/: apps.py  permissions.py  urls.py
favorite/: urls.py
fund/: urls.py
future_market/: apps.py  permissions.py  urls.py
global_market/: apps.py  permissions.py  urls.py
nginx/: nginx.conf
option_market/: apps.py  permissions.py  urls.py
payment/: urls.py
samaneh/: asgi.py  celery.py  routes.py  routs.py  settings.py  test_consumer.py  test_view.py  test_view_monthly_activity.py  urls.py  wsgi.py
scheduler/: portfoyar_scheduler_util.py
stock_market/: permissions.py  router.py  routes.py  urls.py
support/: apps.py  urls.py
wordpress/: docker-compose.wp.yml  wp-docker-compose.yml
(+678 files in other folders)
