[project]
name = "portfoyar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "saraey", email = "saraeygh@gmail.com"},
]
dependencies = [
    "Django==5.0.1",
    "django-cors-headers==4.3.1",
    "django-extensions==3.2.3",
    "django-jalali==6.0.1",
    "djangorestframework==3.14.0",
    "drf-excel==2.4.0",
    "gunicorn==21.2.0",
    "jdatetime==4.1.1",
    "locust==2.23.1",
    "matplotlib==3.8.2",
    "persiantools==3.0.1",
    "psycopg2-binary==2.9.9",
    "pymongo==4.6.1",
    "redis>=7.0.1",
    "requests==2.31.0",
    "tqdm==2.2.3",
    "mymelipayamak>=1.0.0",
    "psutil>=6.1.0",
    "SQLAlchemy>=2.0.36",
    "pandas==2.0.3",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "celery>=5.5.3",
    "django-celery-beat>=2.8.1",
    "flower>=2.0.1",
    "django-celery-results>=2.6.0",
    "django-silk>=5.4.3",
    "zeep>=4.3.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
